tests/compile_fail/borrow/forward_ref_generic.rs
#[derive(derive_more::Borrow)]
#[borrow(forward)]
struct Foo<'a, T>(&'a T);

fn main() {}
